[gd_scene load_steps=3 format=2]

[ext_resource path="res://Textures/NoSkin.png" type="Texture" id=1]
[ext_resource path="res://Cases/Case.gd" type="Script" id=2]

[node name="Case1" type="TextureButton"]
margin_left = 28.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 67.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaseName" type="Label" parent="."]
margin_left = -26.0
margin_top = 66.0
margin_right = 88.0
margin_bottom = 82.0
text = "CaseName"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaseAmount" type="Label" parent="."]
margin_left = -24.7957
margin_top = 99.9996
margin_right = 89.2043
margin_bottom = 114.0
text = "CaseName"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="." to="." method="_on_Case1_button_up"]
